# cartoon-face-recognition

./: .gitignore  .scratch.sh  README.md  pyproject.toml  requirements.txt  requirements_for_mac_m1_py11.txt
cartoon_face_recognition/: notebook.ipynb
facedetector_training/mtcnn/train/: data.py
facedetector_training/scripts/: detect_on_video.py  gen_onet_train.py  gen_pnet_train.py  gen_rnet_train.py  track_on_video.py  train_onet.py  train_pnet.py  train_rnet.py
retinaface_training/: README.md  train.py
retinaface_training/data/: wider_face.py
retinaface_training/data/icartoonface/personai_icartoonface_dettrain/: icartoonface_dettrain_data_conversion.py
retinaface_training/layers/modules/: multibox_loss.py
retinaface_training/models/: retinaface.py
utils/: check_torch_macos.py
