[tool.poetry]
name = "cartoon-face-recognition"
version = "0.1.0"
description = ""
authors = ["desertsniper87 <torshobuet@gmail.com>"]
readme = "README.md"
packages = [{include = "cartoon_face_recognition"}]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
facenet-pytorch = "^2.5.2"
matplotlib = "^3.6.3"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
opencv-python = "^4.7.0.68"
numpy = "^1.24.2"
easydict = "^1.10"
cython = "^0.29.33"
progressbar2 = "^4.2.0"
tensorboardx = "^2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
